--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Tugas Chapter 3 GCP dan MongoDB</title>
+    <title>Tugas Chapter 4 GCP dan MongoDB POST</title>
   </head>
   <body>
-    <h1 class="judul" style="text-align: center">Chapter 3 GCP dan MongoDB</h1>
+    <h1 class="judul" style="text-align: center">
+      Chapter 4 GCP dan MongoDB POST
+    </h1>
     <p>Nama : Daffa Audya Pramana</p>
     <p>NPM : 1214015</p>
     <p>Kelas : D4TI 3A</p>
